# llm-bedrock-anthropic

./: .gitignore  README.md  llm_bedrock_anthropic.py  llm_bedrock_anthropic_v2.py  pyproject.toml
llm_bedrock_anthropic.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: create_test_fixtures.py  test_attachments.py
tests/fixtures/documents/: test.md
