[project]
name = "llm-bedrock-anthropic"
version = "0.4"

description = "LLM plugin for Anthropic's Claude on AWS Bedrock"
readme = "README.md"
authors = [{name = "Sean Blakey"}, {name = "Will Sorenson"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]

dependencies = [
    "llm",
    "boto3 >= 1.28.60",
    "pydantic>=1.9.0, <3",
]

[project.urls]
Homepage = "https://github.com/sblakey/llm-bedrock-anthropic"

[project.entry-points.llm]
bedrock_claude = "llm_bedrock_anthropic"
