[tool.poetry]
name = "llm-bedrock-anthropic"
version = "0.4.4"

description = "LLM plugin for Anthropic's Claude on AWS Bedrock"
readme = "README.md"
authors = ["Sean Blakey", "Will Sorenson"]
license = "Apache-2.0"
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]

[tool.poetry.dependencies]
python = "^3.8"
llm = "^0.15"
pydantic = "^2.8.2"
boto3 = "^1.34.153"
pillow = "^10.4.0"

[project.urls]
Homepage = "https://github.com/sblakey/llm-bedrock-anthropic"

[project.entry-points.llm]
bedrock_claude = "llm_bedrock_anthropic"
