[project]
name = "llm-bedrock-anthropic"
version = "0.4.7"

description = "LLM plugin for Anthropic's Claude on AWS Bedrock"
readme = "README.md"
authors = [{name = "Sean Blakey"}, {name = "Will Sorenson"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]

dependencies = [
    "llm",
    "boto3 >=1.34.55",
    "pydantic >= 2.0",
    "pillow >= 10.4.0"
]

[project.urls]
Homepage = "https://github.com/sblakey/llm-bedrock-anthropic"

[project.entry-points.llm]
bedrock_claude = "llm_bedrock_anthropic"
